--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
-    "mongoose": "^4.13.0"
+    "material-ui": "^0.19.4",
+    "mongoose": "^4.13.0",
+    "react-materialize": "^1.0.17",
+    "react-router-dom": "^4.2.2"
   }
 }
